Updated Qt install action

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -104,15 +104,17 @@ jobs:
 
       - name: Install Qt MinGW
         if: "contains(matrix.config.name, 'MinGW')"
-        uses: jurplel/install-qt-action@v2
+        uses: jurplel/install-qt-action@v4
         with:
           cached: ${{ steps.cache.outputs.cache-hit }}
           arch: 'win64_mingw81'
+          version: '5.15.*'
 
       - name: Install Qt
         if: "!contains(matrix.config.name, 'MinGW')"
-        uses: jurplel/install-qt-action@v2
+        uses: jurplel/install-qt-action@v4
         with:
+          version: '5.15.*'
           cached: ${{ steps.cache.outputs.cache-hit }}
 
       - name: Configure
